nombre en controllesr

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server/index.js",
     "start": "node server/index.js",
     "server": "nodemon server/index.js --ignore frontend",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
