--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server/index.js",
-    "start": "node server/index.js",
+    "start": "node index.js",
     "server": "nodemon server/index.js --ignore frontend",
     "client": "npm start --prefix frontend",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.1"
   },
+  "proxy": "http://localhost:4000",
   "devDependencies": {
     "nodemon": "^1.19.1"
   }
