--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "timeago.js": "^4.0.0-beta.2"
+    "timeago.js": "^4.0.0-beta.2",
+    "prop-types": "15.6.2",
+    "@progress/kendo-drawing": "1.5.7",
+    "@progress/kendo-react-pdf": "2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
